prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - 100xdevs.com
      secretName: landing-tls
    - hosts:
      - placements.100xdevs.com
      secretName: job-board-tls
    - hosts:
      - algo.100xdevs.com
      secretName: nginx-tls
    - hosts:
      - wallet.100xdevs.com
      secretName: wallet-tls
    - hosts:
      - muzer.100xdevs.com
      secretName: muzer-tls
    - hosts:
      - db.algo.100xdevs.com
      secretName: algo-db-tls
    - hosts:
      - app.100xdevs.com
      secretName: cms-tls
    - hosts:
      - projects.100xdevs.com
      secretName: dailycode-tls
    - hosts:
      - exchange-proxy.100xdevs.com
      secretName: exchange-proxy-tls
    - hosts:
      - video-fetcher.100xdevs.com
      secretName: video-fetcher-tls
    - hosts:
      - chat.100xdevs.com
      secretName: chat-api-tls
    - hosts:
      - school.100xdevs.com
      secretName: school-tls
    - hosts:
      - photo.100xdevs.com
      secretName: photo-frontend-tls
    - hosts:
      - api.photoaiv2.100xdevs.com
      secretName: photo-backend-tls
  rules:
    - host: algo.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algo-next
                port:
                  number: 80
    - host: placements.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-board
                port:
                  number: 80
    - host: db.algo.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algo-db
                port:
                  number: 80
    - host: app.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms
                port:
                  number: 80
    - host: projects.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dailycode
                port:
                  number: 80
    - host: exchange-proxy.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exchange-proxy
                port:
                  number: 3000
    - host: 100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: video-fetcher.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fetcher
                port:
                  number: 80
    - host: wallet.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallet
                port:
                  number: 80
    - host: muzer.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muzer
                port:
                  number: 80
    - host: chat.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 80
    - host: school.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: school
                port:
                  number: 80
    - host: photo.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-ai-frontend
                port:
                  number: 80
    - host: api.photoaiv2.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-ai-backend
                port:
                  number: 80
